--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <h1>Suzy Ferreira</h1>
         <h2>Desenvolvedor Front-End</h2>
 
-        <p>Sou um apaixonada por tecnologia em busca de evolução constante.</p>
+        <p>Sou uma apaixonada por tecnologia em busca de evolução constante.</p>
 
         <!-- Lista ordenada <ol> -->
         <!-- Lista não ordenada <ul> -->
 
 
         <ul>
-            <li><a href="#" >Github</a></li>
+            <li><a href="https://github.com/suzyalfer/" target="_blank" >Github</a></li>
             <li><a href="#" >Linkedin</a></li>
-            <li><a href="#" >Youtube</a></li>
-            <li><a href="#" >Whatsapp</a></li>
+            <li><a href="#" >Instagram</a></li>
+            <li><a href="https://wa.me/5521000000" >Whatsapp</a></li>
         </ul>
 
         <a href="https://www.cotiinformatica.com.br/" target="_blank" id="assinatura">Desenvolvido por: Coti Informática </a>
